X/Y/2011 ola-0.8.9
 * Fixed a bug when a broadcast RDM request was sent to a universe with
   multiple ports bound
 * Fixed an memory leak in the RDM code
 * Added more RDM tests including broadcast & vendorcast tests

26/3/2011 ola-0.8.8
 * Added RDM discovery for the DMXter widgets
 * Added a bunch more RDM responder tests
 * Two RDM memory leaks fixed
 * Incremental RDM discovery added (where supported)
 * Minor code cleanup

19/2/2011 ola-0.8.7
 * Added a Python RDM API & example programs.
 * Integrated the python rdm code with the PID store (rdm.openlighting.org)
 * Added around 128 RDM responder test cases

9/12/2010 ola-0.8.6
 * added the graphical RDM patcher
 * improved support for picking the outgoing multicast interface
 * add RDM support for the DMXters
 * fixed a couple of memory leaks in the UI
 * internal refactoring to support testing
 * merged the Callback & Closure classes
 * added extensive testing for the DMX-TRI and DMXter widgets
 * simplified internal RDM handling

06/11/2010 ola-0.8.5
  Added a simple mobile web UI
  Fixed the web UI so it works on Opera
  Start olad automatically from the c++ clients if it's not already running
  Add more attributes to the RDM web UI
  Bug fixes for the RDM TRI
  Python API bug fixes

19/10/2010 ola-0.8.4
  Add the RDM web UI
  Work around an ArtNet RDM bug
  Handle ACK overflow in the DMX-TRI

23/9/2010 ola-0.8.3
  Add Manufacturer / Device name resolution to the web UI for RDM devices.
  Fix a couple of compile bugs.
  For each DMX-over-IP plugin, display the bound IP address in the device name.
  Change the DMX console to send a packet every second even if nothing changes.
  Fix a memory leak in the RDM controller

19/9/2010 ola-0.8.2
  Moved the DMX Console to the new UI
  Removed the old web UI, no more requirements for ctemplate
  Added ACK_OVERFLOW support for RDM over ArtNet
  Added Support for the last remaining E1.20 PIDS
  Re-factored the Ola Client code to fix the problem of de-multiplexing